--- a/Components/hero.html
+++ b/Components/hero.html
@@ -50,6 +50,25 @@
       header {
         background-color: orangered;
         height: 100vh;
+        position: relative;
+      }
+
+      .header-container {
+        background-color: pink;
+        width: 1200px;
+        position: absolute;
+
+        /* In relation to parent size */
+        left: 50%;
+        top: 50%;
+
+        /* In relation to ELEMENT size */
+        transform: translate(-50%, -50%);
+      }
+
+      .header-container-inner {
+        width: 50%;
+        background-color: white;
       }
 
       nav {
@@ -101,13 +120,16 @@
         <div>NAVIGATION</div>
       </nav>
 
-      <div class="container">
-        <h1>A healthy meal delivered to your door every single day.</h1>
-        <p>
-          The smart 365-days-per-year food subscription that will make you eat
-          healthy again. Tailored to your personal tastes and nutritional needs.
-        </p>
-        <a href="#" class="btn">Start eating well</a>
+      <div class="header-container">
+        <div class="header-container-inner">
+          <h1>A healthy meal delivered to your door every single day.</h1>
+          <p>
+            The smart 365-days-per-year food subscription that will make you eat
+            healthy again. Tailored to your personal tastes and nutritional
+            needs.
+          </p>
+          <a href="#" class="btn">Start eating well</a>
+        </div>
       </div>
     </header>
 
