--- a/Components/app-layout/style.css
+++ b/Components/app-layout/style.css
@@ -8,15 +8,22 @@ body {
   font-family: sans-serif;
   color: #343a40;
   font-size: 24px;
+  height: 100vh;
+
+  display: grid;
+  grid-template-columns: 80px 400px 1fr 250px;
+  grid-template-rows: 80px 1fr;
 }
 
 nav {
   background-color: #343a40;
+  grid-row: 1 / -1;
 }
 
 menu {
   background-color: #7048e8;
   color: #fff;
+  grid-column: 2 / -1;
 }
 
 section {
