--- a/Components/app-layout/style.css
+++ b/Components/app-layout/style.css
@@ -33,8 +33,16 @@ nav {
 
 menu {
   background-color: #7048e8;
-  color: #fff;
   grid-column: 2 / -1;
+}
+
+button {
+  font-size: 16px;
+  background-color: #5f3dc4;
+  border: none;
+  cursor: pointer;
+  color: #fff;
+  padding: 8px 12px;
 }
 
 section {
