--- a/Components/app-layout/style.css
+++ b/Components/app-layout/style.css
@@ -18,7 +18,6 @@ body {
 }
 
 nav,
-menu,
 section,
 main,
 aside {
@@ -34,10 +33,16 @@ nav {
 menu {
   background-color: #7048e8;
   grid-column: 2 / -1;
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  padding: 0 40px;
 }
 
 button {
+  display: inline-block;
   font-size: 16px;
+  font-weight: bold;
   background-color: #5f3dc4;
   border: none;
   cursor: pointer;
