--- a/Components/app-layout/style.css
+++ b/Components/app-layout/style.css
@@ -58,6 +58,9 @@ button:last-child {
 section {
   background-color: #e9ecef;
   padding: 40px;
+
+  overflow: scroll;
+
   display: flex;
   flex-direction: column;
   gap: 40px;
@@ -66,6 +69,9 @@ section {
 .email {
   background-color: #adb5bd;
   height: 96px;
+
+  /* if using flex box */
+  flex-shrink: 0;
 
   display: flex;
   align-items: center;
